--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^10.0.0"
+    "puppeteer": "^10.0.0",
+    "turndown": "^7.0.0"
   }
 }
